Revision history for Perl extension {{$dist->name}}

{{$NEXT}}

1.101490  2010-05-29 22:33:57 Europe/Vienna
    - comply with CPAN::Meta::Resources and Dist::Zilla v3 (thanks apocalypse)

1.101420  2010-05-22 14:11:15 Europe/Vienna
    - removed weaver.ini since that's handled in Dist::Zilla's [@MARCEL] now
    - removed unused variable

1.100701  2010-03-11 12:40:00 Europe/Vienna
    - fix POD

1.100700  2010-03-11 12:33:29 Europe/Vienna
    - original version